# SharpFerret

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Core.vcxproj  Core.vcxproj.filters  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  SingeEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  etq  icon.psd
Core/: CMakeLists.txt
Core.dir/RelWithDebInfo/: Core.lib.recipe
Core.dir/RelWithDebInfo/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Core.lastbuildstate  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Core/Headers/: config.h  cunit.h  hashing.h  memory.h  os.h  tests.h  types.h
Core/Headers/core/: array.h  atomic.h  config.h  csharp.h  cunit.h  exceptions.h  file.h  guards.h  hashing.h  macros.h  memory.h  modules.h  os.h  parsing.h  plugins.h  pointer.h  random.h  reflection.h  runtime.h  strings.h  tasks.h  tests.h  types.h
Core/Headers/core/imaging/: imaging.h
Core/Headers/core/math/: bigMatrix.h  cuboid.h  floats.h  ints.h  macros.h  quaternions.h  rectangles.h  shapes.h  triangles.h  vectors.h
Core/Headers/graphics/: font.h  framebuffers.h  light.h  material.h  recttransform.h  scene.h  shadercompiler.h  texture.h
Core/Headers/math/: bigMatrix.h  ints.h  quaternions.h  triangles.h
Core/Headers/modeling/: mesh.h
Core/Headers/singine/: gameobjectHelpers.h  guards.h
Core/Source/: Collider.c  SingeCore.c  array.c  atomic.c  bigMatrix.c  camera.c  config.c  cuboid.c  cunit.c  drawing.c  file.c  floats.c  hashing.c  imaging.c  importer.c  input.c  ints.c  light.c  material.c  memory.c  model.c  modules.c  neat.c  os.c  parsing.c  plugins.c  pointer.c  quaternions.c  random.c  range.c  rectangles.c  reflection.c  runtime.c  scene.c  shaders.c  sharedBuffer.c  strings.c  tasks.c  texture.c  textureDefinitions.c  (+5 more)
Core/Tests/: cunit.h  tests.c  tests_material.c
Engine/: CMakeLists.txt
Engine.dir/RelWithDebInfo/: Engine.exe.recipe  vc143.idb
Engine/Headers/: csharp.h
Engine/Headers/engine/: gameobject.h  gameobjectHelpers.h  time.h
Engine/Headers/engine/ai/: neat.h
Engine/Headers/engine/data/: objectPool.h
Engine/Headers/engine/graphics/: camera.h  colors.h  drawing.h  font.h  framebuffers.h  graphicsDevice.h  imaging.h  light.h  material.h  rawTexture.h  recttransform.h  renderMesh.h  renderModel.h  renderbuffers.h  scene.h  shadercompiler.h  shaders.h  sharedBuffer.h  text.h  texture.h  textureDefinitions.h  transform.h  window.h
Engine/Headers/engine/input/: input.h
Engine/Headers/engine/modeling/: importer.h  mesh.h  model.h
Engine/Headers/engine/physics/: Collider.h  voxel.h
Engine/Headers/engine/scripts/: fpsCamera.h
Engine/Headers/graphics/: imaging.h  window.h
Engine/Headers/helpers/: quickmask.h
Engine/Headers/math/: range.h  shapes.h
Engine/Headers/modeling/: importer.h
Engine/Headers/scripts/: fpsCamera.h
Engine/Headers/singine/: enumerableItem.c  exceptions.h  gameobject.h  parsing.h  strings.h
Engine/Source/: Collider.c  EntryPoint.c  camera.c  colors.c  cunit.c  drawing.c  file.c  font.c  framebuffers.c  gameobject.c  gameobjectHelpers.c  graphicsDevice.c  hashing.c  importer.c  input.c  instancedResource.c  light.c  material.c  memory.c  mesh.c  model.c  neat.c  objectPool.c  physics.c  random.c  rawTexture.c  recttransform.c  reflection.c  renderMesh.c  renderbuffers.c  scene.c  shadercompiler.c  shaders.c  sharedBuffer.c  text.c  texture.c  textureDefinitions.c  time.c  transform.c  types.c  (+3 more)
Engine/Source/scripts/: fpsCamera.c
Generics/: CMakeLists.txt
Generics/Source/: Compiler.h  GenericExpansion.c  GenericExpansion.h  Helpers.c  Tokenizer.c  Tokenizer.h  main.c  sourceParser.c  sourceParser.h
RelWithDebInfo/: Core.idb  Core.lib
SingeCore/: ColorUV.fragmentshader  DistanceGlow.vertexshader  GUIShader.vertexshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  SingeCore.vcxproj  SingeCore.vcxproj.filters  arrow.blend  cubeuv.psd  doublecube.blend  doublecube.blend1  uv_debug.psd
SingeCore/src/: SingeCore.c  csharp.h  enumerable.c  enumerable.h  exceptions.h  imaging.c  memory.c  memory.h
assets/colliders/: cube.collider
assets/materials/: debugOrientation.material  debugOrientationGUI.material  debug_cubeDepthMap.material  default.material  depthMap.material  guiMaterial.material  lamp.material  marble.material  materialFormat.material  outline.material  shadow.material  shadowCubemap.material  silver.material  skybox.material  textMaterial.material  unlit.material  uvMaterial.material
assets/models/: F2UProto3D.blend  F2UProto3D.mtl  Mountain.mtl  VoxelHelper.blend  arrow.blend  ball.blend  cube.blend  doublecube.blend  floor.blend  lamp.blend1  lightBulb.blend  room.blend  room.blend1  sphere.blend  voxel_debug.blend  voxel_debug.blend1
assets/prefabs/: ball.gameobject  car.gameobject  cube.gameobject  fox.gameobject  lamp.gameobject  monkey.gameobject  proto.gameobject  reflectiveSphere.gameobject  room.gameobject  skybox.gameobject  sphere.gameobject
assets/shaders/: GUIShader.vertexshader  cubemapShadow.shader  debug_normal.fragmentshader  debug_normal.geometryshader  debug_normal.shader  debug_normal.vertexshader  default.fragmentshader  default.vertexshader  depthMap.shader  empty.fragmentshader  linearCubemap.fragmentshader  lit.fragmentshader  outlineShader.fragmentshader  shadow.shader  skybox.shader  text.fragmentshader  text.shader  text.vertexshader  unlit.fragmentshader  unlit.shader
assets/textures/: cube_specular.psd  cube_specular.texture  cube_uv.psd  mountain.texture  rainbowGradient.psd  skybox.texture  uv_debug.psd
cglm-subbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cglm-populate.sln  cglm-populate.vcxproj  cglm-populate.vcxproj.filters  cmake_install.cmake
(+234 files in other folders)
